<resources>
    <string name="app_name">Class Organizer</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="empty_string" />
    <!-- Network -->
    <string name="ip_address">185.243.52.66</string>
    <string name="connection_failed">Connection with server could not be established.</string>
    <!-- Login and registration -->
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="sign_in_label">SIGN IN</string>
    <string name="register_label">REGISTER</string>
    <string name="login_form">Login form</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="email_address">E-mail address</string>
    <!-- Modals -->
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="show_more">Show more</string>
    <string name="register_student_message">Approximate phone to your teacher\'s phone...</string>
    <string name="register_student_title">Register attendance</string>
    <string name="register_modal_success">Thank you! Your registration has been successfully processed!</string>
    <string name="register_modal_error">Oops... Something went wrong. Check your Internet connection and try again.</string>
    <string name="attendance_list_success">Attendance list for selected class has just opened!</string>
    <string name="attendance_list_error">Oops... Something went wrong. Check selected fields and try again.</string>
    <string name="attendance_list_closed">The attendance list for your class has been closed. Click below to see the details.</string>
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- Menu -->
    <string name="menu_register_attendance">Register Attendance</string>
    <string name="menu_manage_attendance">Manage Attendance</string>
    <string name="menu_open_attendance">Open Attendance List</string>
    <string name="menu_view_courses">Manage Courses</string>
    <string name="menu_manage_results">Manage Results</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_logout">Logout</string>
    <!-- Courses -->
    <string name="filter_courses_info">Filter out courses to display.</string>
    <string name="view_courses_info">View all the courses you run.</string>
    <string name="cycle">Cycle</string>
    <string name="model">Model</string>
    <string name="faculty">Faculty</string>
    <string name="field">Field</string>
    <string name="course">Course</string>
    <string name="type_of_class">Type of class</string>
    <string name="supervisor">Supervisor</string>
    <string name="classes">Classes</string>
    <string name="open_list">Open list</string>
    <!-- Attendance list preview -->
    <string name="student_id">Student Id</string>
    <string name="student_name">Student Name</string>
    <string name="check_in_time">Check-in Time</string>
    <!-- Results -->
    <string name="tap_course_info">Tap a course to manage results.</string>
    <string name="pick_classes_modal">Pick type of classes:</string>
    <string name="info_box_manage">Manage Results For Course:</string>
    <string name="info_box_model">Model:</string>
    <string name="info_box_type">Type of Classes:</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add_result">Add result</string>
    <string name="result_colon">Result:</string>
    <string name="title_colon">Title:</string>
    <string name="description_colon">Description:</string>
    <string name="added_colon">Added on:</string>
    <string name="result">Result</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="added_date">Date</string>
</resources>
