<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ViewCoursesActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="60px"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/list_item_yellow_background"
            android:padding="18dp">

            <TextView
                android:id="@+id/courseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="Image Processing"
                android:textColor="#FF3635"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:columnCount="2"
                android:orientation="horizontal"
                android:weightSum="100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courseName"
                app:layout_constraintVertical_bias="0.5">

                <TextView
                    android:id="@+id/cycleLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/cycle"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/cycleValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/modelLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/model"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/modelValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/facultyLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/faculty"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/facultyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/fieldLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/field"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/fieldValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/supervisorLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:text="@string/supervisor"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/supervisorValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/classesLabel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:text="@string/classes"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

                <TextView
                    android:id="@+id/classesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:text="TextView"
                    android:textStyle="bold"
                    android:textColor="@color/list_item_background_color" />

            </GridLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>