<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".MenuActivity" >

    <ImageView
        android:id="@+id/studentAttendanceImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:onClick="showRegisterAttendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space2"
        app:srcCompat="@drawable/menu_attendance" />

    <Space
        android:id="@+id/space2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/student_menu_attendance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_register_attendance"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/studentAttendanceImageView"
        app:layout_constraintEnd_toEndOf="@+id/studentAttendanceImageView"
        app:layout_constraintStart_toStartOf="@+id/studentAttendanceImageView" />

    <ImageView
        android:id="@+id/studentAccountImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="64dp"
        android:onClick="showAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentAttendanceImageView"
        app:srcCompat="@drawable/menu_account" />

    <TextView
        android:id="@+id/student_menu_account_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_my_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/studentAccountImageView"
        app:layout_constraintEnd_toEndOf="@+id/studentAccountImageView"
        app:layout_constraintStart_toStartOf="@+id/studentAccountImageView" />

    <ImageView
        android:id="@+id/studentLogoutImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:onClick="showLogoutModal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/studentAccountImageView"
        app:layout_constraintTop_toBottomOf="@+id/studentAttendanceImageView"
        app:srcCompat="@drawable/menu_logout" />

    <TextView
        android:id="@+id/student_menu_logout_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/menu_logout"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/studentLogoutImageView"
        app:layout_constraintEnd_toEndOf="@+id/studentLogoutImageView"
        app:layout_constraintStart_toStartOf="@+id/studentLogoutImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>